5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1593_2043.log
== TEST (2019-03-26 10:27:55) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+C*3+d*4//(1+2+3+4)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media=a*1+b*2+C*3+d*4//(1+2+3+4)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:53) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4//(1+2+3+4)
print(round(media,2))
-- OUTPUT:
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:08) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4/(1+2+3+4)
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:50) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4/1+2+3+4
print(round(media,2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:42) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4//(1+2+3+4)
print(round(media,2))
-- OUTPUT:
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:08) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4//(1+2+3+4)
print(round(media,2))
-- OUTPUT:
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:32:12) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4//(1+2+3+4)
print(round(media,2))
-- EXECUTION TIME:
0.160221
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
49.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
44.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
46.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:17) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4//(1+2+3+4)
print(round(media,2))
-- OUTPUT:
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:01) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=a*1+b*2+c*3+d*4/(1+2+3+4)
print(round(media,2))
-- OUTPUT:
49.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:43) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=((a*1)+(b*2)+(c*3)+(d*4))/(1+2+3+4)
print(round(media,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:35:09) 
-- CODE:
a=float(input("nota1: "))
b=float(input("nota2: "))
c=float(input("nota3: "))
d=float(input("nota4: "))
media=((a*1)+(b*2)+(c*3)+(d*4))/(1+2+3+4)
print(round(media,2))
-- EXECUTION TIME:
0.195701
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
